Tipos de retención. Occam Tests.